# 5G-neural-network

./: Dataset_237k.csv  Dockerfile  Pipfile  README.md  dataset_generation.py  docker-compose.yml  hmm.ipynb  prediction.py  pyproject.toml  server.py  test.py  training.py  training_experiments.ipynb  webserver.py
best_model/: checkpoint.pt  scaler.txt
dataset-generation/: Dockerfile  main.py
documentation/: sources.bib
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  apiConn.ts  types.ts
prediction/: 104k.csv  237k.csv  column_headlines.txt  hmm.ipynb
simulator/: dataset_generation.py  prediction.py  training.py  training_experiments.ipynb  webserver.py
